src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__macros__test__fallible2.snap
---
source: src/expr/src/scalar/func/macros.rs
expression: "#[sqlfunc()]\nfn fallible2(a: Option<f32>) -> Result<f32, EvalError> {\n    Ok(a.unwrap_or_default())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Fallible2;
impl crate::func::EagerUnaryFunc for Fallible2 {
    type Input<'a> = Option<f32>;
    type Output<'a> = Result<f32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        fallible2(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Fallible2 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(fallible2))
    }
}
fn fallible2(a: Option<f32>) -> Result<f32, EvalError> {
    Ok(a.unwrap_or_default())
}
