src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__macros__test__infallible3.snap
---
source: src/expr/src/scalar/func/macros.rs
expression: "#[sqlfunc()]\nfn infallible3(a: f32) -> Option<f32> {\n    Some(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Infallible3;
impl crate::func::EagerUnaryFunc for Infallible3 {
    type Input<'a> = f32;
    type Output<'a> = Option<f32>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        infallible3(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Infallible3 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(infallible3))
    }
}
fn infallible3(a: f32) -> Option<f32> {
    Some(a)
}
